Home page accessibility fixes (#664)
* home page accessibility fixes

* Bring home page intro section into index.html

* Add fallback background colours

* Tidy up responsive sections

* Remove fallback colours due to classes on Safari

* Add alt text for psuedo content

* Add fallback colour incase SVG does not load

* Fix typo

* Remove alt English text for +/- to avoid translation issues. Fixed properly in #666

* Comment out SVG URL version

See https://github.com/HTTPArchive/almanac.httparchive.org/pull/664#discussion_r377617959

* Move background colour into SVG for consistency

* Regenerate base64 banner image

--- a/src/static/css/2019.css
+++ b/src/static/css/2019.css
@@ -578,7 +578,7 @@ blockquote {
 }
 
 blockquote::before {
-  content: '"';
+  content: '"' / "";
   position: absolute;
   z-index: -1;
   top: -4rem;
