--- a/src/templates/en/2019/index.html
+++ b/src/templates/en/2019/index.html
@@ -90,7 +90,29 @@
 {% endblock %}
 
 {% block main %}
-<div id="home">
+<main id="maincontent">
+  <section class="intro-container">
+    <div class="intro">
+      <div class="intro-year">2019</div>
+      <h1 class="title title-lg title-alt">Web Almanac</h1>
+      <h2>
+        HTTP Archive's annual<br>
+        <b>state of the web</b> report
+      </h2>
+      <p>
+        Our mission is to combine the raw stats and trends of the HTTP Archive with the expertise of the web community. The Web Almanac is a comprehensive report on the state of the web, backed by real data and trusted web experts. It is comprised of 20 chapters spanning aspects of page content, user experience, publishing, and distribution.
+      </p>
+      <a href="{{ url_for('table_of_contents', year=year, lang=lang) }}" class="btn">
+        Start exploring
+      </a>
+    </div>
+    <div class="intro-image-2019-wrapper">
+      <div class="intro-image-2019"></div>
+    </div>
+    <div class="intro-image-wrapper">
+      <div class="intro-image"></div>
+    </div>
+  </section>
   <section class="featured-chapter">
     <div class="featured-chapter-content">
       <h2 class="title title-center">Featured Chapter</h2>
@@ -128,7 +150,7 @@
         See the contributors
       </a>
     </div>
-    <div class="people">
+    <div class="people" aria-hidden="true">
       <div class="people-number">{{ contributors }}</div>
       <img id="character-markup" class="character" src="/static/images/character-markup.png" alt="" width="154" height="252" loading="lazy" />
       <img id="character-star" class="character" src="/static/images/character-star.png" alt="" width="245" height="254" loading="lazy" />
@@ -165,5 +187,5 @@
       <img class="methodology-characters" src="/static/images/methodology-characters.png" alt="" width="984" height="354" loading="lazy" />
     </div>
   </section>
-</div>
+</main>
 {% endblock %}
