--- a/src/templates/fr/2019/base_chapter.html
+++ b/src/templates/fr/2019/base_chapter.html
@@ -15,7 +15,19 @@ var indexBox = document.querySelector('.index-box');
 var indexBoxTitle = document.querySelector('.index .index-btn');
  
 indexBoxTitle.addEventListener('click', function(e) {
-  indexBox.classList.toggle('show');
+  var indexOpen = indexBox.classList.toggle('show');
+  indexBoxTitle.setAttribute('aria-expanded',indexOpen);
+  var ariaLabel = indexOpen ?  "Fermer la table des matières" : "Ouvrir la table des matières";
+  indexBoxTitle.setAttribute('aria-label',ariaLabel);
+});
+        
+indexBox.addEventListener("keydown", function onPress(event) {
+  if (event.key === 'Escape') {
+    if (indexBoxTitle.getAttribute('aria-expanded') === 'true') {
+      indexBoxTitle.click();
+      indexBoxTitle.focus();
+    }
+  }
 });
 
 document.addEventListener("keyup", function onPress(event) {
