--- a/src/templates/ja/2019/base.html
+++ b/src/templates/ja/2019/base.html
@@ -1,5 +1,5 @@
 {% extends "base.html" %}
 
 {% block styles %}
-  <link rel="stylesheet" href="/static/css/2019.css">
+  <link rel="stylesheet" href="/static/css/2019.css?v=2">
 {% endblock %}
